[project]
name = "radix-addition"
version = "0.0.1"
authors = [
    { name="Batuhan Baserdem", email="baserdem.batuhan@gmail.com" },
]
maintainers = [
    { name="Batuhan Baserdem", email="baserdem.batuhan@gmail.com" },
]
description = "A demonstration of ML by performing base-N addition"
readme = "Readme.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/bbaserdem/radix-addition-python"

[project.scripts]
radix-addition = "radix_addition:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
